@@ -1,4 +1,4 @@
-# last modified 2013-08-26 by J. Fox
+# last modified 2013-09-12 by J. Fox
 
 useDynLib(Rcmdr)
 
@@ -26,7 +26,7 @@ is.SciViews, is.valid.name, justDoIt, KMeans, labelRcmdr, Library, lineplot,
 listAllModels, listAOVModels, listDataSets, listFactors, listGeneralizedLinearModels, 
 listLinearModels, listMultinomialLogitModels, listNumeric, listPlugins, 
 listProportionalOddsModels, listTwoLevelFactors, listVariables, 
-lmP, logger, LogWindow, MacOSXP, mergeRows,
+lmP, logger, LogWindow, MacOSXP, manualTranslationP, mergeRows,
 Message, MessagesWindow, modelFormula, modelsP, multinomP, Numeric,
 numericP, numSummary, OKCancelHelp, OutputWindow, packageAvailable, partial.cor,
 plotDistr, plotMeans, polrP, popCommand, popOutput, putDialog, putRcmdr, 
