@@ -4,6 +4,10 @@ Changes to Version 2.0-1
 
   o Updated translations (with thanks to the translators): Japanese (Araki Takaharu).
 
+  o Most errors now removed from R Markdown and knitr documents.
+
+  o Small bug fixes.
+
 Changes to Version 2.0-0
 
   o New package co-author: Milan Bouchet-Valat. 
